--- a/src/test/resources/deployment.yaml
+++ b/src/test/resources/deployment.yaml
@@ -2,10 +2,10 @@ deployments:
   -
     name: pattern1
     enable: true
-    deployscripts: wso2am/deploy.sh
-    repository: git@github.com:yasassri/kubernetes-artifacts.git
+    deployscripts: deploy.sh
+    repository: https://github.com/erandidesilva/ballerina-kubernetes-artifacts.git
     suite: pattern1
-    undeployscripts: wso2am/undeploy.sh
+    undeployscripts: undeploy.sh
     filePath: deployment.json
     instancemap :
     -
@@ -13,9 +13,9 @@ deployments:
 
   -
     name: pattern2
-    enable: true
+    enable: false
     deployscripts: wso2am/deploy.sh
-    repository: git@github.com:Dilshani/kubernetes-artifacts.git
+    repository: https://github.com/erandidesilva/ballerina-kubernetes-artifacts.git
     suite: pattern2
     undeployscripts: wso2am/undeploy.sh
     filePath: data.json
