--- a/src/test/resources/deployment.yaml
+++ b/src/test/resources/deployment.yaml
@@ -9,7 +9,7 @@ deployments:
     filePath: deployment.json
     instancemap :
     -
-      ballerina : ballerina-server
+      ballerina : ballerina-test-version-1
 
   -
     name: pattern2
@@ -21,5 +21,5 @@ deployments:
     filePath: data.json
     instancemap :
     -
-      ballerina : ballerina-server
+      ballerina : ballerina-test-version-1
 
