--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.wso2.carbon.automation</groupId>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>apim-distributed-tests</artifactId>
+    <artifactId>ballerina-distributed-tests</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <repositories>
@@ -306,6 +306,12 @@
                     <groupId>xalan</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
